# NOVAK-Hash-Monitor

./: CONTRIBUTING.md  LICENSE-NOVAK.txt  LICENSE.NOVAK  NOTICE  SECURITY.md  index.html  readme.md
audio/: Break-The-Chain-EIR.json  Break-The-Chain-HVET.json  QR PAYLOAD  readme.md
css/: readme.md
docs/: APPENDIX B GRADIENT-SPACE ADVERSARIAL SIMULATION VECTORS.docx  Appendix A — Adversarial Prompt Library.docx  Appendix-A_Glossary.md  Appendix-B-Mathematical Notation Guide.md  LICENSE-NOVAK  NOVAK PROTOCOL — PART 1.docx  NOVAK SP-1 — EXECUTION INTEGRITY STANDARD.docx  NOVAK UNIFIED GLOSSARY & MATHEMATICAL DEFINITIONS (UTG-1).docx  NTM-2 — NOVAK Red Team Adversarial Test Suite.docx  PAPER 6 — ECONOMICS.docx  PART 10 — FINAL SUMMARY + CROSS-DOMAIN USE CASES + APPLICATION FRAMEWORK.docx  PART 3 — SCIENTIFIC FOUNDATIONS OF THE NOVAK PROTOCOL.docx  PART 5 — SYSTEM MODEL & EXECUTION FLOW.docx  PART 6 — IMPLEMENTATION LAYERS.docx  PART-10_Final_Summary_Use_Cases.md  PART-11_Threat_Model.md  PART-2_What-NOVAK-Is.md  PART-3_Scientific_Foundations.md  PART-4_Formal_Architecture.md  PART-5_System_Model.md  PART-6_Implementation_Layers.md  PART-7_Security_Model.md  PART-8_Governance_and_Compliance.md  PART-9_Formal_Whitepaper.md  Part-1_Executive_summary.md  SP-5 — NOVAK CERTIFICATION STANDARD.md  UTG-1_Alphabetical_Glossary.md  UTG-1_NOVAK_Unified_Technical_Glossary_and_Math.md  cryptography-101.html  hash-basics-and-hvet.md  index.html  (+2 more)
novak_pba_monitor/: chain.py  cli.py  eir.py  gate.py  hashing.py  hvet.py  merkle.py  pyproject.toml  readme.md  verify.py  watch.py
(+67 files in other folders)
